# vecbot

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md  attribution-strategy.md  baseline-and-fp.md  repo-start.md  showcase.md  threat-model.md
examples/traces/: README.md
src/vecbot/: __init__.py  analyzer.py  capabilities.py  cli.py  drift.py  events.py  html_report.py  phases.py  render.py  residue.py  scenarios.py
tests/: test_analyzer.py  test_baseline.py  test_cli.py  test_events.py  test_html_report.py
